turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:1: error: ')' expected but integer literal found.
override def run() {for (i <- 1 to 7 ) {avance(80);droite(360./7.)}
                                                               ^